--- a/style.css
+++ b/style.css
@@ -7,6 +7,24 @@ body {
     font-family: Arial, Helvetica, sans-serif;
  }
 
+ #profile-container {
+    max-width: 300px;
+    margin: 80px auto;
+    background-color: white;
+    border: 1px solid gray;
+    border-radius: 6px;
+ }
+
+ #profile-image {
+     width: 90%;
+     height: auto;
+
+ }
+
+ #profile-name {
+    text-align: center;
+ }
+
 #header {
     width: 100%;
     height: 50px;
